Fix author layout on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -107,3 +107,20 @@ h1:before, .anchor:before {
     background-color: #00369f;
     font-size: .8em;
 }
+
+// Force author layout to stack vertically on mobile
+@media screen and (max-width: 600px) {
+    .author__avatar,
+    .author__content,
+    .author__urls-wrapper {
+      display: block !important;
+      width: 100% !important;
+      text-align: center !important;
+      margin-bottom: 1em !important;
+    }
+  
+    .author__urls_sm a {
+      margin: 0 0.5em;
+    }
+  }
+  
